# py-nanoclaw

./: .dockerignore  .env.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  DEPLOY.md  Dockerfile.bot  LOCAL.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
container/: Dockerfile  agent_runner.py
container/creds_broker/: Dockerfile  server.py
nanoclaw/: __init__.py  agent_http_server.py  calendar_mcp.py  claude_agent_run.py  cli.py  creds_broker_client.py  dispatch.py  google_auth.py  loop.py  mcp_server.py  models.py  onecli_config.py  openai_client.py  scheduler.py  session.py  telegram_app.py
ops/: deploy_remote.sh  gcp_create_vm.sh  google_oauth_bootstrap.py  local_docker_up.sh  poc_google_oauth.py  remote_setup.sh  smoke_read_all_accounts.py
runtime/sessions/: CLAUDE.md
runtime/sessions/.claude/: settings.json
tests/: test_calendar_mcp.py  test_claude_agent_run.py  test_creds_broker_client.py  test_creds_broker_server.py  test_dispatch_wiring.py  test_google_auth.py  test_loop.py  test_onecli_config.py  test_openai_client.py  test_scheduler.py  test_telegram_app.py
