[project]
name = "nanoclaw"
version = "0.1.0"
description = "asyncio inbound queue + file-backed session id for channel/agent decoupling"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
]

[project.scripts]
nanoclaw = "nanoclaw.cli:main"
nanoclaw-telegram = "nanoclaw.telegram_app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanoclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
